tests/bad/tuple_exceeds_maximum_of_types.glaz
fn tuple_exceeds_maximum_of_types() (
	i32, i32, i32, i32, i32, i32, i32, i32, i32
) { }
