tests/bad/tuple_exceeds_maximum_of_types.out
tests/bad/tuple_exceeds_maximum_of_types.glaz:1:38-3:2: error: tuples can have a maximum of up to 8 types
     | 
   1 - fn tuple_exceeds_maximum_of_types() (
  |  	i32, i32, i32, i32, i32, i32, i32, i32, i32
   3 - ) { }
     | 
     = help: you can use a struct instead
glaz error: could not compile `tuple_exceeds_maximum_of_types`, aborting due to previous error.
